newclay/test/Compiler/Resolver/Fail/StatementExprBindingOnlyInExpr1/main.clay
main() {
    (var x = 1; x);
    x;
}
